Fixed bug: first pass at properly namespacing CSS classes and IDs.  The actual namespace is still open for debate.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@577 743128fe-103e-dd11-99c4-001b210b3e58

--- a/typo3/sysext/fe_edit_advanced/res/css/fe_edit_closed.css
+++ b/typo3/sysext/fe_edit_advanced/res/css/fe_edit_closed.css
@@ -1,4 +1,4 @@
-#menubar {
+#feEditAdvanced-menuBar {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -9,7 +9,7 @@
 	font-family: Helvetica, Arial, sans-serif;
 }
 
-#menubar .smallbutton {
+#feEditAdvanced-menuBar .feEditAdvanced-smallButton {
 	display: inline-block;
 	text-decoration: none;
 	cursor: pointer;
@@ -24,6 +24,6 @@
 	float: right;
 }
 
-#menubar a.smallbutton:hover {
+#feEditAdvanced-menuBar a.feEditAdvanced-smallButton:hover {
 	color: white;
 }
